pkg/test/resourcefixture/testdata/basic/networkmanagement/v1alpha1/networkmanagementconnectivitytest/basicnetworkmanagementconnectivitytest/_identities.yaml
- caisURL: unknown
  group: networkmanagement.cnrm.cloud.google.com
  kind: NetworkManagementConnectivityTest
  name: networkmanagementconnectivitytest-${uniqueId}
  namespace: ${uniqueId}
  version: v1alpha1
