pkg/test/resourcefixture/testdata/basic/networkmanagement/v1alpha1/networkmanagementconnectivitytest/basicnetworkmanagementconnectivitytest/create.yaml
# Copyright 2026 Google LLC
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#      http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: networkmanagement.cnrm.cloud.google.com/v1alpha1
kind: NetworkManagementConnectivityTest
metadata:
  name: networkmanagementconnectivitytest-${uniqueId}
spec:
  projectRef:
    external: ${projectId}
  location: us-central1
  description: "Initial description"
  source:
    ipAddress: 10.0.0.1
  destination:
    ipAddress: 10.0.0.2
